Added link share

--- a/html/AboutUs.html
+++ b/html/AboutUs.html
@@ -19,7 +19,7 @@
         <div role="main" class="login ui-content">
 
             <img class="About-Us User-registration Ipad-logo-size logo-image"
-                src="../Resources/images/Logos/Transparent.png" alt="User Icon">
+                src="../images/Logos/Transparent.png" alt="User Icon">
             <a href="#">Online Store</a></p>
             <label class="orange-label" for="username">Locations</label>
             <div class="mapouter">
@@ -33,7 +33,7 @@
             <label class="orange-label" for="Outlet">Address : 8/1 Tokyo, Japan</label>
             
         </div>
-        <p class="About-Us Register-Account-Text"><a href="#">Back to Home</a></p>
+        <p class="About-Us Register-Account-Text"><a data-rel="back" ">Back</a></p>
     </div><!-- /content -->
 </body>
 
