--- a/html/guest.html
+++ b/html/guest.html
@@ -20,12 +20,12 @@
 
             <div data-role="popup" id="server-error" class="ui-corner-all">
                 <div style="padding:10px 20px;">
-                    <img style="width: 200px;margin: auto;display: block;" src="../Resources/images/fail.gif" alt="">
+                    <img style="width: 200px;margin: auto;display: block;" src="../images/fail.gif" alt="">
                     <h2 style="color: #ff647c;text-align: center">Something went wrong. Its not you it's us!</h2>
                 </div>
             </div>
 
-            <img class="Ipad-logo-size logo-image" src="../Resources/images/Logos/Transparent.png" alt="">
+            <img class="Ipad-logo-size logo-image" src="../images/Logos/Transparent.png" alt="">
 
             <div class=" button-container">
                 <button class="login-button ui-btn ui-btn-inline rounded-button"><a href="Dashboard.html" rel="external">Continue As A Guest</a></button>
