--- a/html/leaderboard.html
+++ b/html/leaderboard.html
@@ -22,19 +22,19 @@
         <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
             <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button"
                data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
+                <img src="../images/logos/Transparent.png" border="0">
             </a>
             <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Leaderboard</h3>
 
             <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button"
                data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                <img src="../images/icons/icons8-camera-24.png" border="0">
             </a>
 
 
             <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all"
                data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                <img src="../images/icons/header-userprofile.png" border="0">
             </a>
 
         </div>
@@ -44,7 +44,7 @@
         <div class="shinny-header">
             <p style="text-align: center;">SCAN & WIN</p>
 
-            <img class="leaderboard-image" src="../Resources/images/items/91-1.png" alt="User Icon">
+            <img class="leaderboard-image" src="../images/items/progress0.jpeg" alt="User Icon">
             <p style=" margin: 0px 15px;">
                 Scan AR Markers spread through out the local stores and win coupons for each completed objective. Keep
                 scanning to increase points and get a chance to take part in "Anything you can carry, you get it for
@@ -53,7 +53,7 @@
         </div>
         <div class="main-grid-for-topuser">
             <div class="item">
-                <img class="leaderboard-user-icon  logo-image" src="../Resources/images/SeasonalRankTop4.png"
+                <img class="leaderboard-user-icon  logo-image" src="../images/SeasonalRankTop4.png"
                      alt="User Icon">
                 <h4 class="user-game-points" style="line-height: 0px;" id="first-place-name"></h4>
                 <h4 class="user-game-points" style="line-height: 0px;">Points : <span id="first-place-point"></span>
@@ -63,7 +63,7 @@
         </div>
         <div class="main-grid-for-second-third-user">
             <div class="item--second-third">
-                <img class="leaderboard-user-icon-second-third   logo-image" src="../Resources/images/SeasonalRank7-1.png"
+                <img class="leaderboard-user-icon-second-third   logo-image" src="../images/SeasonalRank7-1.png"
                      alt="User Icon">
                 <h4 class="user-game-points" style="line-height: 0px;" id="second-place-name">Rasheen</h4>
                 <h4 class="user-game-points" style="line-height: 0px;">Points : <span id="second-place-point"></span>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="item--second-third">
-                <img class="leaderboard-user-icon-second-third  logo-image" src="../Resources/images/SeasonalRank6-1.png"
+                <img class="leaderboard-user-icon-second-third  logo-image" src="../images/SeasonalRank6-1.png"
                      alt="User Icon">
                 <h4 class="user-game-points" style="line-height: 0px;" id="third-place-name">Rasheen</h4>
                 <h4 class="user-game-points" style="line-height: 0px;">Points : <span id="third-place-point"></span>
@@ -107,32 +107,32 @@
                     <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
                     <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/icons8-home-24.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/001-search.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/002-fire.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px"
+                        <img src="../images/icons/003-shopping-cart.png" border="0" width="35px"
                              height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/003-menu.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
             </ul>
