--- a/html/Orderhistory.html
+++ b/html/Orderhistory.html
@@ -20,17 +20,17 @@
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                    <img src="../images/logos/Transparent.png" border="0">
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Order History</h3>
 
                 <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                    <img src="../images/icons/icons8-camera-24.png" border="0">
                 </a>
 
 
                 <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                    <img src="../images/icons/header-userprofile.png" border="0">
                 </a>
 
             </div>
@@ -49,7 +49,7 @@
             <div class="order-main">
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
@@ -63,7 +63,7 @@
                 </div>
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
@@ -77,7 +77,7 @@
                 </div>
                 <div class="order-item">
                     <div class="order-item-image">
-                        <img class="bulletproof order-product product-image-items-display" src="../Resources/images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
+                        <img class="bulletproof order-product product-image-items-display" src="../images/items/ps4 png.png" alt=" PS4" style="width:70%; float: left;" />
                     </div>
                     <div class="order-item-text">
                         <p style="margin-top: 2px;"><b>PlayStation 4</b></p>
@@ -101,27 +101,27 @@
                     <li>
                         <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
                         <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                            <img src="../images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
                         </a>
                     </li>
                     <li>
                         <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
+                            <img src="../images/icons/001-search.png" border="0" width="35px" height="35px" />
                         </a>
                     </li>
                     <li>
                         <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
+                            <img src="../images/icons/002-fire.png" border="0" width="35px" height="35px" />
                         </a>
                     </li>
                     <li>
                         <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                            <img src="../images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
                         </a>
                     </li>
                     <li>
                         <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                            <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
+                            <img src="../images/icons/003-menu.png" border="0" width="35px" height="35px" />
                         </a>
                     </li>
                 </ul>
