--- a/html/favourite.html
+++ b/html/favourite.html
@@ -20,17 +20,17 @@
         <div data-role="header" class="header-class">
             <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/logos/Transparent.png" border="0">
+                    <img src="../images/logos/Transparent.png" border="0">
                 </a>
                 <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Favourite</h3>
 
                 <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                    <img src="../images/icons/icons8-camera-24.png" border="0">
                 </a>
 
 
                 <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
-                    <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                    <img src="../images/icons/header-userprofile.png" border="0">
                 </a>
 
             </div>
@@ -48,7 +48,7 @@
 
         <div data-role="popup" id="cart-success" data-theme="" class="ui-corner-all" style="z-index: 9999;">
             <div style="padding:10px 20px;">
-                <img style=" width: 200px;margin: auto;display: block;" src="../Resources/images/addtocart-success.gif" alt="">
+                <img style=" width: 200px;margin: auto;display: block;" src="../images/addtocart-success.gif" alt="">
                 <h2 style="color: #93dfca;">Item added to cart.</h2>
             </div>
         </div>
@@ -56,7 +56,7 @@
 
         <div data-role="popup" id="cart-error" data-theme="" class="ui-corner-all">
             <div style="padding:10px 20px;">
-                <img style="width: 200px;margin: auto;display: block;" src="../Resources/images/AW331857_12.gif" alt="">
+                <img style="width: 200px;margin: auto;display: block;" src="../images/AW331857_12.gif" alt="">
                 <h2 style="color: #ff647c;">Something went wrong.</h2>
             </div>
         </div>
@@ -64,34 +64,8 @@
         <div role="main" class="favourites ui-content">
 
             <div class="loader">
-                <img class="loader-gif" src="./../Resources/images/giphy.gif">
+                <img class="loader-gif" src="./../images/giphy.gif">
                 <p> The goodest bois are finding the products..</p>
-            </div>
-
-            <div id="drop-select" class="ui-content">
-                <a href="#filter-popup" data-rel="popup" data-position-to="window" class="filter-button login-button ui-btn ui-btn-inline rounded-button" data-transition="pop">Filter</a>
-                <div data-role="popup" id="filter-popup" data-theme="" class="ui-corner-all">
-
-                    <form>
-                        <div class="form-filter" style="padding:10px 20px;">
-                            <fieldset data-role="controlgroup">
-                                <input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked">
-                                <label for="radio-choice-1">Price From Lowest to the Highest</label>
-                                <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2">
-                                <label for="radio-choice-2">Price From Highest to the Lowest</label>
-                            </fieldset>
-                            <div data-role="rangeslider">
-                                <label for="range-1a">Price Range:</label>
-                                <input type="range" name="range-1a" id="range-1a" min="0" max="100" value="40">
-                                <label for="range-1b">Rangeslider:</label>
-                                <input type="range" name="range-1b" id="range-1b" min="0" max="100" value="80">
-                            </div>
-                            <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Filter Products</button>
-
-                        </div>
-                    </form>
-                </div>
-
             </div>
             <div class="ui-field-contain">
 
@@ -118,27 +92,27 @@
                         <li>
                             <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
                             <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                                <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
+                                <img src="../images/icons/icons8-home-24.png" border="0" width="35px" height="35px" />
                             </a>
                         </li>
                         <li>
                             <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                                <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px" />
+                                <img src="../images/icons/001-search.png" border="0" width="35px" height="35px" />
                             </a>
                         </li>
                         <li>
                             <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                                <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px" />
+                                <img src="../images/icons/002-fire.png" border="0" width="35px" height="35px" />
                             </a>
                         </li>
                         <li>
                             <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                                <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
+                                <img src="../images/icons/003-shopping-cart.png" border="0" width="35px" height="35px" />
                             </a>
                         </li>
                         <li>
                             <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false" data-theme="none">
-                                <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px" />
+                                <img src="../images/icons/003-menu.png" border="0" width="35px" height="35px" />
                             </a>
                         </li>
                     </ul>
