--- a/html/payment.html
+++ b/html/payment.html
@@ -22,19 +22,19 @@
         <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
             <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button"
                data-shadow="false" data-theme="none">
-                <img src="../Resources/images/logos/Transparent.png" border="0">
+                <img src="../images/logos/Transparent.png" border="0">
             </a>
             <h3 class="header-title" style="margin-bottom: 0 !important; margin-top: 18px !important;">Checkout</h3>
 
             <a href="ar-scanner.html" rel="external" class="btn-camera ui-btn-none ui-btn ui-corner-all" data-role="button"
                data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/icons8-camera-24.png" border="0">
+                <img src="../images/icons/icons8-camera-24.png" border="0">
             </a>
 
 
             <a href="ProfileNavigation.html" rel="external" class="btn-userprofile ui-btn-none ui-btn ui-corner-all"
                data-role="button" data-shadow="false" data-theme="none">
-                <img src="../Resources/images/icons/header-userprofile.png" border="0">
+                <img src="../images/icons/header-userprofile.png" border="0">
             </a>
         </div>
     </div>
@@ -80,7 +80,7 @@
                 <button type="submit" id="payment-btn">Pay $ <span id="price">25</span></button>
                 <div id="processing-btn" onclick="addReview()"
                      class="ui-btn ui-shadow ui-corner-all login-processing login-button" >
-                    <img src="../Resources/images/loader.gif"
+                    <img src="../images/loader.gif"
                          style="display: inline-block;width: 33px;height: 33px;" alt="">
                     <p class="processing-text">Processing</p>
                 </div>
@@ -142,32 +142,32 @@
                     <!-- <a href="#" data-role="button" data-icon="homeicon"></a> -->
                     <a href="Dashboard.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/icons8-home-24.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/icons8-home-24.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="search.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/001-search.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/001-search.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Promotions.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/002-fire.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/002-fire.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Cart.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/003-shopping-cart.png" border="0" width="35px"
+                        <img src="../images/icons/003-shopping-cart.png" border="0" width="35px"
                              height="35px"/>
                     </a>
                 </li>
                 <li>
                     <a href="Catagories.html" rel="external" class="btn-nav-bar" data-role="button" data-shadow="false"
                        data-theme="none">
-                        <img src="../Resources/images/icons/003-menu.png" border="0" width="35px" height="35px"/>
+                        <img src="../images/icons/003-menu.png" border="0" width="35px" height="35px"/>
                     </a>
                 </li>
             </ul>
