--- a/html/fashion.html
+++ b/html/fashion.html
@@ -71,12 +71,11 @@
                 <a href="#filter-popup" data-rel="popup" data-position-to="window" class="filter-button login-button ui-btn ui-btn-inline rounded-button" data-transition="pop">Filter</a>
                 <div data-role="popup" id="filter-popup" data-theme="" class="ui-corner-all">
 
-                    <form>
                         <div class="form-filter" style="padding:10px 20px;">
                             <fieldset data-role="controlgroup">
-                                <input type="radio" name="radio-choice-1" id="radio-choice-1" value="choice-1" checked="checked">
+                                <input type="radio" name="radio-choice-1" id="radio-choice-1" value="low-to-high" checked="checked">
                                 <label for="radio-choice-1">Price From Lowest to the Highest</label>
-                                <input type="radio" name="radio-choice-1" id="radio-choice-2" value="choice-2">
+                                <input type="radio" name="radio-choice-1" id="radio-choice-2" value="high-to-low">
                                 <label for="radio-choice-2">Price From Highest to the Lowest</label>
                             </fieldset>
                             <div data-role="rangeslider">
@@ -85,10 +84,9 @@
                                 <label for="range-1b">Rangeslider:</label>
                                 <input type="range" name="range-1b" id="range-1b" min="0" max="100" value="80">
                             </div>
-                            <button type="submit" class="login-button ui-btn ui-btn-inline rounded-button">Filter Products</button>
+                            <button onclick="filterApply()" class="login-button ui-btn ui-btn-inline rounded-button">Filter Products</button>
 
                         </div>
-                    </form>
                 </div>
 
             </div>
