Added media queries to all iphones

--- a/html/Cart.html
+++ b/html/Cart.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div data-role="header" class="header-class">
-            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+           <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
                 <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/logos/Transparent.png" border="0">
                 </a>
