--- a/html/Dashboard.html
+++ b/html/Dashboard.html
@@ -24,7 +24,7 @@
 <body>
     <div data-role="page" data-theme="d">
         <div data-role="header" class="header-class">
-            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+           <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
 
                 <a href="#" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/logos/Transparent.png" border="0">
