--- a/html/ProductPage.html
+++ b/html/ProductPage.html
@@ -21,7 +21,7 @@
 <body>
     <div data-role="page" data-theme="d" idPag="page-content">
         <div data-role="header" class="header-class">
-            <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+           <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
                 <a data-rel="back"  class="btn-home ui-btn-none ui-btn ui-corner-all"  data-role="button" data-shadow="false" data-theme="none">
                     <img src="../images/icons/icons8-back-arrow-96.png" style="height: 29px!important;     margin-top: 3px;" border="0">
                 </a>
