--- a/html/leaderboard.html
+++ b/html/leaderboard.html
@@ -19,7 +19,7 @@
 <body>
 <div data-role="page" data-theme="d" idPag="page-content">
     <div data-role="header" class="header-class">
-        <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;">
+       <div style="display: grid;grid-template-columns: 20% 40% 20% 20%;" class="header-grid">
             <a href="Dashboard.html" rel="external" class="btn-home ui-btn-none ui-btn ui-corner-all" data-role="button"
                data-shadow="false" data-theme="none">
                 <img src="../images/logos/Transparent.png" border="0">
